[package]
name = "ddns-updater"
version = "0.1.0"
authors = ["Marco Napetti <marco.napetti@athonet.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "=0.2.0-alpha.6"
trust-dns-resolver = "=0.18.0-alpha.1"
mysql_async = "=0.21.0-alpha.4"
log = "0.4"
env_logger = "0.7"
