[package]
name = "ddns-updater"
version = "0.1.0"
authors = ["Marco Napetti <marco.napetti@athonet.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "=0.2.0-alpha.6"
futures-util-preview = "=0.3.0-alpha.19"
hyper = { version = "=0.13.0-alpha.4", features = ["unstable-stream"] }
trust-dns-resolver = "=0.18.0-alpha.1"
once_cell = "1.2"
regex = "1.3"
percent-encoding = "2.1"
htmlescape = "0.3"
log = "0.4"
env_logger = "0.7"
