[package]
name = "ddns-updater"
version = "0.1.1"
authors = ["Marco Napetti <marco.napetti@athonet.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures-util = "0.3"
hyper = { version = "0.13", features = ["stream"] }
trust-dns-resolver = "0.19"
once_cell = "1.3"
regex = "1.3"
percent-encoding = "2.1"
htmlescape = "0.3"
log = "0.4"
env_logger = "0.7"
